issues/133: part 1 - make predictions based on Class instance instead of name